# JonesComplexity

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  jones_complexity.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.sh  test_jones_complexity.py  tox.ini
tests/: conftest.py  test_flake.py  test_flake8.py  test_main.py  test_output.py
tests/fixtures/: annotations.py  async_await.py  basic.py
tests/test_code_complexity/: test_annotations.py  test_async_await.py  test_basic.py
tests/test_visitor/: conftest.py  test_annotations_equality.py
