[tool.poetry]
name = "jones-complexity"
version = "0.1.2"
description = "Jones Complexity checker, plugin for flake8"

license = "MIT"  # Expat license

authors = [
  "Rich Jones <rich@openwatch.net>",
  "Nikita Sobolev <mail@sobolevn.me>"
]

readme = "README.md"  # Markdown files are supported

repository = "https://github.com/Miserlou/JonesComplexity"
homepage = "https://github.com/Miserlou/JonesComplexity"

keywords = ["flake8", "pycqa", "complexity", "qa", "flake8-plugin"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance"
]


[tool.poetry.plugins."flake8.extension"]
J9 = "jones_complexity:JonesComplexityChecker"


[tool.poetry.dependencies]
python = "^3.5 || ^3.6"


[tool.poetry.dev-dependencies]
pytest-isort = "^0.2.0"
pytest-flake8 = "^1.0"
pytest-randomly = "^1.2"
pytest-cov = "^2.5"
flake8-builtins = "^1.4"
flake8-commas = "^2.0"
flake8-quotes = "^1.0"
flake8-pep3101 = "^1.2"
flake8-comprehensions = "^1.4"
flake8-blind-except = "^0.1.1"
flake8-docstrings = "^1.3"
flake8-string-format = "^0.2.3"
flake8-coding = "^1.3"
flake8-module-name = "^0.1.5"
flake8-bugbear = "^18.2"
flake8-pytest = "^1.3"
pep8-naming = "^0.7.0"
flake8 = "^3.5"
